<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">一键清理</string>
    <string name="btn_junk_clean">释放内存</string>
    <string name="not_find_file">未发现文件</string>
    <string name="wechat_empty_tip">微信只占用手机的部分存储空间,建议使用清理垃圾功能释放存储空间</string>
    <string name="qq_empty_tip">QQ只占用手机的部分存储空间,建议使用清理垃圾功能释放存储空间</string>
    <string name="load_error_retry"> 加载失败，请稍后刷新！</string>
    <string name="try_refresh">刷新试试</string>
    <string name="circle_loading_text">正在加载...</string>
    <string name="click_to_refresh">加载失败，请稍后点我刷新</string>
    <string name="have_no_more">亲，到底儿咯～</string>
    <string name="click_load_more">点我加载更多</string>
    <string name="managementfragment_wechat_clean">微信清理</string>
    <string name="clean_find_size"><![CDATA[发现<font color="#ff0000">%1$s </font> 垃圾]]></string>
    <string name="wechat_scanning">扫描中</string>
    <string name="wechat_free_spcae"><![CDATA[<font color="#3097fd">%1$s</font>  空间已释放]]></string>
    <string name="wechat_go_clean">立即清理</string>
    <string name="suggestion_clean">建议清理</string>
    <string name="wechat_statistics_data">定期清理微信,释放更多空间</string>
    <string name="sgtextview_show">0.00</string>
    <string name="sgtextview_kb">KB</string>
    <string name="temp_file">运行文件</string>
    <string name="cache_file">朋友圈缓存</string>
    <string name="chat_pic">图片文件</string>
    <string name="chat_voice">语音文件</string>
    <string name="chat_video">聊天视频</string>
    <string name="temp_file_info">使用过程产生的垃圾文件</string>
    <string name="temp_file_effect">不含任何聊天记录,请放心清理</string>
    <string name="cache_file_info">浏览过的图片和视频文件缓存</string>
    <string name="cache_file_effect">删除后联网可重新加载,请放心清理</string>
    <string name="chat_pic_info">聊天图片,包括聊天消息、公众号中的图片</string>
    <string name="qq_chat_pic_info">聊天图片,包括个人和群消息</string>
    <string name="chat_voice_info">聊天语音，包括个人和群消息</string>
    <string name="chat_video_info">聊天产生的视频及预览图，包括个人和群消息</string>
    <string name="export">导出</string>
    <string name="file_delete">删除</string>
    <string name="file_delete_withdata">删除(%s)</string>
    <string name="file_delete_nodata">删除</string>
    <string name="wechat_voice_tip"> 由于微信对聊天语音进行了加密,无法播放,请谨慎删除</string>
    <string name="category_all">所有</string>
    <string name="category_music">音乐</string>
    <string name="category_video">视频</string>
    <string name="category_picture">图片</string>
    <string name="category_theme">主题</string>
    <string name="category_document">文档</string>
    <string name="category_zip">压缩包</string>
    <string name="category_apk">安装包</string>
    <string name="category_other">其它</string>
    <string name="category_other_pic">其它图片</string>
    <string name="enable_sd_card">无可用SD卡，请插入或连接SD卡</string>
    <string name="sd_card_size">共<xliff:g id="total_size">%1$s</xliff:g></string>
    <string name="sd_card_available">可用<xliff:g id="available_size">%1$s</xliff:g>/</string>
    <string name="wechat_export_limit_count"><![CDATA[当前已选中%1$d个，一次最多只能导出<font color=\"#3097fd\">100个</font>文件]]></string>
    <string name="wechat_export_limit_size"><![CDATA[[当前已选%1$s，一次最多只能导出<font color=\"#3097fd\">1GB</font>的图片.]]]></string>
    <string name="has_export">已导出</string>
    <string name="export_fail">导出失败</string>
    <string name="item_space_error">存储空间不足</string>
    <string name="app_name_wang">手机助手</string>
    <string name="no_zh">取消</string>
    <string name="clear">清理</string>
    <string name="confir_export_count_file">确认导出%1$d个文件</string>
    <string name="wechat_export_explanation"><![CDATA[导出后将保存在<font color=\"#3097fd\">/storage/wechatfile_export</font>中，导出过程可能需要较长时间，请耐心等候]]></string>
    <string name="qq_export_explanation"><![CDATA[导出后将保存在<font color=\\\"#3097fd\\\">/storage/QQfile_export</font>中，导出过程可能需要较长时间，请耐心等候]]></string>
    <string name="wechat_export_path">路径 :/storage/wechatfile_export</string>
    <string name="qq_export_path">路径 :/storage/QQfile_export</string>
    <string name="dialog_cancel">取消</string>
    <string name="begin_export">开始导出</string>
    <string name="dialog_filedelete_title">是否删除</string>
    <string name="dialog_filedelete_content">确定要删除文件夹</string>
    <string name="dialog_filedelete_local">同时删除本地文件</string>
    <string name="confir_delete_count_file">确认删除%1$d个文件</string>
    <string name="yes_zh">确定</string>
    <string name="download_deleting">正在执行，请稍候…</string>
    <string name="exporting">正在导出</string>
    <string name="wechat_export_success_tip">已成功导出%1$d个文件，您可以通过下面路径找到这些文件</string>
    <string name="wechat_export_error_tip">%1$d个文件导出失败，请注意查看</string>
    <string name="wechat_export_exist_tip">%1$d个文件已存在，请注意查看</string>
    <string name="i_know">我知道了</string>
    <string name="alert">提示</string>
    <string name="qr_capture_tip_know">@string/i_know</string>
    <string name="rubbish_in_market">手机助手的垃圾</string>
    <string name="join_ignore_list">加入忽略名单</string>
    <string name="listview_reminder">提醒大小</string>
    <string name="clean_setting">垃圾清理设置</string>
    <string name="clean_mobile_set_plan">为手机垃圾清理设置一个提醒计划</string>
    <string name="alert_interval">提醒间隔</string>
    <string name="clean_time_set">"每隔&lt;font color='#f57149'&gt;%1$s&lt;/font&gt;天"</string>
    <string name="clean_size_set">"每隔&lt;font color='#ff683a'&gt;%1$s MB&lt;/font&gt; 时在通知的栏提醒我"</string>
    <string name="clean_alert_size">提醒大小</string>
    <string name="clean_ignore_list">垃圾忽略名单</string>
    <string name="auto_update_sqlite">自动更新清理库</string>
    <string name="clean_database_upgrade_set">WIFI网络自动下载和更新清理库</string>
    <string name="trust_count">"已忽略%1$d项"</string>
    <string name="clean_alert_time">时间间隔提醒</string>
    <string name="bt_stop">停止</string>
    <string name="mobile_clear_scanning">正在扫描中:</string>
    <string name="header_cache">缓存垃圾</string>
    <string name="scan_progress_end">定期清理,释放更多空间</string>
    <string name="deleting">正在删除:</string>
    <string name="junk_suggest_title">建议清理</string>
    <string name="apk_installed">[已安装]</string>
    <string name="apk_not_installed">[未安装]</string>
    <string name="apk_break">[破损]</string>
    <string name="system_app_enable_clean">系统应用，可清理</string>
    <string name="use_app_suggest_clean">个人应用，建议清理</string>
    <string name="apk_new_download1"><![CDATA[ <font color=\"#00a0ea\">[新下载]</font> %1$s]]></string>
    <string name="dialog_clean_size">大小 : </string>
    <string name="clean_suggest_default">不含重要文件，清理后不影响使用</string>
    <string name="size_format">大小: %1$s</string>
    <string name="contain_number_file"><u>包含%1$s个文件</u></string>
    <string name="not_checked">不选中</string>
    <string name="ram_usage">内存占用 :</string>
    <string name="forced_stop">强制停止</string>
    <string name="check">选中</string>
    <string name="dialog_clean_version">版本 : </string>
    <string name="dialog_clean_date">日期 : </string>
    <string name="dialog_clean_path">路径 : </string>
    <string name="dialog_clean_detail_size">3.3Mb</string>
    <string name="ignore_all_packages_under_this_path"><u>忽略此路径下的所有安装包</u></string>
    <string name="dialog_clean_size_info">大小：5.5MB</string>
    <string name="header_residual">卸载残留</string>
    <string name="apk_file">APK文件</string>
    <string name="wechat">微信</string>
    <string name="install_manager">软件管理</string>
    <string name="comment_time">2014-5-14 14:11</string>
    <string name="update_tv_all_size">2012MB</string>
    <string name="mobile_clear_bigfile_list_info_position_pre">位置: </string>
    <string name="mobile_clear_bigfile_list_info_position_total_size">总大小: </string>
    <string name="mobile_clear_bigfile_list_info_position_time">时间: </string>
    <string name="please_choose_file_tyle">选择文件类型</string>
    <string name="no_network">检测到未连接网络,请设置</string>
    <string name="install_step_done">完成</string>
    <string name="install_step_start">打开</string>
    <string name="accessibility_install_tips">手机助手为你自动安装应用</string>
    <string name="accessibility_click_time">已累计帮你点击了%1$d次按钮</string>
    <string name="notification_clean_can_fast">清理可加速运行</string>
    <string name="header_ram">内存加速</string>
    <string name="header_apk">无用安装包</string>
    <string name="scanning">正在扫描中:</string>
    <string name="install_fail_file_not_exist">安装文件已不存在</string>
    <string name="clean_success_size">成功清理%1$s垃圾</string>
    <string name="no_found_junk">未发现垃圾</string>
    <string name="so_beautiful">手机已经很干净了</string>
    <string name="today_clean_total_clean">今日清理: %1$s\n历史清理: %2$s</string>
    <string name="wechat_statistics_data_small">定期清理微信,释放更多空间</string>
    <string name="file_manager">文件清理</string>
    <string name="file_features_directions">整理文件,释放更多空间</string>
    <string name="file_category_count_default">读取中…</string>
    <string name="select_all">全选</string>
    <string name="file_pop_tips">可用空间不足，快去清理垃圾吧</string>
    <string name="file_account_in_managerment">(%1$s)</string>
    <string name="file_management_nodata">亲，您这儿啥都没有！</string>
    <string name="image_dir_empty">没有任何图片</string>
    <string name="music_dir_empty">没有任何音乐</string>
    <string name="video_dir_empty">没有任何视频</string>
    <string name="document_dir_empty">没有任何文档</string>
    <string name="apk_dir_empty">没有安装包</string>
    <string name="zip_dir_empty">没有任何压缩包</string>
    <string name="shadown">&gt;</string>
    <string name="pic">相册</string>
    <string name="management_duration">duration</string>
    <string name="open_way">打开方式</string>
    <string name="image_set_wallpager">设为壁纸</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_faile">删除失败</string>
    <string name="set_wallpaper_success">设置壁纸成功</string>
    <string name="set_wallpaper_faile">设置壁纸失败</string>
    <string name="music_set_ring">设为铃声</string>
    <string name="ring_audio">来电铃声</string>
    <string name="notification_audio">通知铃声</string>
    <string name="alarm_audio">闹钟铃声</string>
    <string name="install_apk">安装</string>
    <string name="sticky_tv_progress">50</string>
    <string name="junk_clean">深度清理</string>
    <string name="wechat_clean">微信清理</string>
    <string name="qq_clean">QQ清理</string>
    <string name="uninstall_app_data">卸载应用,获取更多内容</string>
    <string name="qq_statistics_data">定期清理QQ,释放更多空间</string>
    <string name="receive_file">接收的文件</string>
    <string name="receive_file_info">聊天对话中接收到的全部文件</string>
    <string name="receive_file_effect">包括接收到的文档、图片、影音等</string>
    <string name="qq_voice_tip">由于QQ对聊天语音进行了加密,暂不支持播放</string>
    <string name="txtfilename">我是文件名称.txt</string>
    <string name="filesize">12.00M</string>
    <string name="qq_go_clean">查看管理</string>
    <string name="toast_bean_best">手机跑得飞快\n更多垃圾，马上处理</string>
    <string name="toast_clean_result">手机已提速%1$d%%\n更多垃圾，马上处理</string>
    <string name="leadinto_home">释放更多空间 深度清理</string>
    <string name="more_news">更多热点资讯\n立即查看</string>
    <string name="used_memory">内存使用%1$d%%</string>
    <string name="device_admin_label">一键清理</string>
    <string name="onkeycleandefaultcontent">欢迎使用一键清理功能</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="managementfragment_qq_clean">QQ清理</string>
    <string name="qq_statistics_data_small">定期清理QQ,释放更多空间</string>
    <string name="more_recommend">更多推荐</string>
    <string name="tv_junk_clean">垃圾清理</string>
    <string name="file_clean">大文件,照片,音乐,视频,安装包,压缩包</string>
    <string name="tv_junk_desc">经常清理垃圾,告别手机卡顿</string>
    <string name="so_clear">手机已经很干净了</string>
    <string name="done">完成</string>
    <string name="keep_habit">经常清理手机，告别手机卡顿</string>
    <string name="scan_again">重新扫描</string>
    <string name="documents_clean">大文件清理</string>
    <string name="documents_clean_dec">清理大于10M的文件</string>
    <string name="picture_clean">相册清理</string>
    <string name="picture_clean_dec">清理质量不佳的图片</string>
    <string name="video_clean">视频清理</string>
    <string name="video_clean_dec">清理不再观看的视频</string>
    <string name="music_clean">音乐清理</string>
    <string name="music_clean_dec">清理不喜欢的歌曲</string>
    <string name="apk_clean">安装包清理</string>
</resources>