<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/ll_title"
        layout="@layout/dialog_title_text"/>
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal|left"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/dialog_clean_size"
                android:textColor="@color/dialog_content_text_color"
                android:textSize="@dimen/dialog_content_text_size" />

            <TextView
                android:id="@+id/tv_file_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:textColor="@color/dialog_content_text_color"
                android:textSize="@dimen/dialog_content_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/dialog_clean_version"
                android:layout_marginTop="4dp"
                android:textColor="@color/dialog_content_text_color"
                android:textSize="@dimen/dialog_content_text_size" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center|left"
                android:textColor="@color/dialog_content_text_color"
                android:textSize="@dimen/dialog_content_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:layout_marginTop="4dp"
                android:text="@string/dialog_clean_date"
                android:textColor="@color/dialog_content_text_color"
                android:textSize="@dimen/dialog_content_text_size" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center|left"
                android:textColor="@color/dialog_content_text_color"
                android:textSize="@dimen/dialog_content_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center|left"
                android:text="@string/dialog_clean_path"
                android:textColor="@color/dialog_content_text_color"
                android:textSize="@dimen/dialog_content_text_size" />

            <TextView
                android:id="@+id/tv_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center|left"
                android:text="@string/dialog_clean_detail_size"
                android:textColor="@color/dialog_content_text_color"
                android:textSize="@dimen/dialog_content_text_size" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_go_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="3dp"
            android:gravity="center|left"
            android:text="@string/ignore_all_packages_under_this_path"
            android:textColor="@color/main_blue_new"
            android:textSize="@dimen/dialog_content_text_size" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal|left" >

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center|left"
            android:maxEms="2"
            android:text="@string/clean_suggest_default"
            android:textColor="@color/dialog_content_text_color"
            android:textSize="@dimen/dialog_content_text_size" />

        <TextView
            android:id="@+id/dialog_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_message"
            android:layout_centerHorizontal="true"
            android:gravity="center|left"
            android:maxEms="2"
            android:text="@string/dialog_clean_size_info"
            android:textColor="@color/dialog_content_text_color"
            android:textSize="@dimen/dialog_content_text_size" />

        <TextView
            android:id="@+id/dialogcheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_size"
            android:layout_centerVertical="true"
            android:layout_marginTop="12dp"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/notebook_icon"
            android:drawablePadding="6dp"
            android:gravity="center|left"
            android:text="@string/contain_number_file"
            android:textColor="@color/main_blue_new"
            android:textSize="@dimen/dialog_content_text_size" />
    </RelativeLayout>
    <include layout="@layout/dialog_buttom_both_btn" />
</LinearLayout>