<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:background="@color/white"
  >

    <ImageView
        android:id="@+id/im_file_type"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"

        android:src="@drawable/nullfile_icon" />

    <TextView
        android:id="@+id/tv_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/im_file_type"
        android:text="@string/wechat"
        android:layout_alignTop="@+id/im_file_type"
        android:layout_marginLeft="23dp"
        android:paddingTop="3dp"
        android:textColor="@color/special_item_first"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_filetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_time"
        android:layout_marginLeft="23dp"
        android:layout_toRightOf="@+id/im_file_type"
        android:layout_below="@+id/tv_filename"
        android:layout_marginTop="10dp"
        android:textColor="@color/qr_result_vcard_title"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/tv_filesize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv_filetime"
        android:layout_gravity="bottom"
        android:paddingBottom="13dp"
        android:layout_marginRight="15dp"
        android:text="@string/update_tv_all_size"
        android:textColor="@color/qr_result_vcard_title"
        android:textSize="12dp" />
</RelativeLayout>
